@@ -20,6 +20,7 @@ set dir=%~dp0
 
 set javaexe=java
 set cp="%dir%nmrfx-analyst-gui-%nvjver%.jar;%dir%lib/Manifest.jar;%dir%plugins/*"
+set JAVA_OPTS="--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
 
 set testjava="%dir%jre\bin\java.exe"
 
